--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -2,15 +2,6 @@
     display: flex;
     justify-content:space-evenly;
     align-items: center;
+    margin-bottom: 4%;
 }
 
-.navbar-links {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-Link {
-    margin-right: 10px;
-    margin-left: 10px;
-}
