before-camping-push

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,102 @@
 
- 
+#hella-fonts
+.roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .roboto-thin-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .roboto-light-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .roboto-regular-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .roboto-medium-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .roboto-black-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
 
-
-@font-face {
-    font-family: 'Roboto';
-    src: url(frontend\src\RobotoCondensed-VariableFont_wght.ttf) format('ttf');
-   }
+  a:link { 
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none;
+    color: #ded9fa; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
 
 * {
     box-sizing: border-box;
     padding: 0;
     scroll-behavior: smooth;
-
+    font-family: Roboto;
     color: white;
+}
+
+test {
+    font-family: Roboto;
 }
 
 html {
@@ -32,6 +116,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    font-family: 'Roboto';
     
 }
 
@@ -39,3 +124,6 @@ footer {
     min-height: 50px;
     margin-top: auto;
 }
+
+
+
