--- a/frontend/src/Pages/About.css
+++ b/frontend/src/Pages/About.css
@@ -1,4 +1,10 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('frontend\src\RobotoCondensed-VariableFont_wght.ttf') format('ttf');
+   }
+
 header {
+    font-family: 'Roboto';
     font-weight: bold;
     font-size: 48px;
 }
